<resources>
    <string name="app_name">GoogleMap_1</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="no_demos">No demos</string>
    <string name="basic_map_demo_label">Map căn bản</string>
    <string name="basic_map_demo_description">Hiện bản đồ, hiện marker</string>
    <string name="title_activity_camera">Camera</string>
    <string name="animate">Animate</string>
    <string name="stop_animation">\u25A0</string>
    <string name="left_arrow">\u2190</string>
    <string name="down_arrow">\u2193</string>
    <string name="up_arrow">\u2191</string>
    <string name="right_arrow">\u2192</string>
    <string name="zoom_in">+</string>
    <string name="zoom_out">-</string>
    <string name="tilt_more">\u2191</string>
    <string name="tilt_less">\u2193</string>
    <string name="duration">Custom Duration</string>
    <string name="go_to_sydney">GO TO SYDNEY</string>
    <string name="go_to_bondi">GO TO BONDI</string>
    <string name="map_not_ready">Map not ready</string>
    <string name="basic_camera_demo_label">Camera</string>
    <string name="basic_camera_demo_description">Camera di chuyển map, phóng to/ nhỏ map, nghiêng map</string>
    <string name="title_activity_circles">Circles</string>
    <string name="properties_circle">Tính chất của hình tròn</string>
    <string name="fill_hue">Fill Hue</string>
    <string name="fill_alpha">Fill Alpha</string>
    <string name="stroke_width">Stroke Width</string>
    <string name="map_circle_description">Google Map with circles.</string>
    <string name="basic_circle_demo_label">Circles</string>
    <string name="basic_circle_demo_description">Tạo vòng tròn, 2 marker, drag vòng tròn, thay bán kính , đổi màu</string>
    <string name="title_activity_test_circle">test_circle</string>
    <string name="title_activity_ground_overlay_demo">GroundOverlayDemoActivity</string>
    <string name="basic_event_demo_label">Events</string>
    <string name="basic_event_demo_description">Tap/ Long click + camera click</string>
    <string name="basic_ground_demo_label">Grounds Overlay</string>
    <string name="basic_ground_demo_description">Lấy hình ảnh lên bản đồ, xoay bản đồ, transparent bản đồ</string>
    <string name="title_activity_test_event">Test_event</string>
    <string name="title_activity_test_ground">Test_ground</string>
    <string name="title_activity_layer">LayerActivity</string>
    <string name="hybrid">Hybric</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="none_map">None map</string>
    <string name="location_permission_denied">Permission bị từ chối</string>
    <string name="permission_required_toast">toast permission</string>
    <string name="permission_rationale_location">permission ddd</string>
    <string name="basic_layer_demo_label">Layers</string>
    <string name="basic_layer_demo_description">Tạo 4 layer cho map gồm mylocation và có check permission nữa</string>
    <string name="title_activity_basic__location__sample">Basic_Location_Sample</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="no_location_detected">No location detected. Make sure location is enabled on the device.</string>
    <string name="basic_location_demo_label">Lấy tọa độ nhờ Google services</string>
    <string name="basic_location_demo_description">build Google Client, xuât tọa độ ra man hình</string>
    <string name="title_activity_location__updates">Location_Updates</string>
    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>
    <string name="last_update_time_label">Last location update time</string>
    <string name="location_updated_message">Location updated</string>
    <string name="basic_location_update_demo_label">Update location periord</string>
    <string name="basic_location_update_demo_description">Cập nhật tọa độ GPS theo mốc</string>
    <string name="title_activity_geocode__api">Geocode_API</string>
    <string name="address_found">Address found</string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid_lat_long_used</string>
    <string name="no_address_found">no_address_found</string>
    <string name="basic_geocoder_update_demo_label">Geocoder</string>
    <string name="basic_geocoder_update_demo_description">chuyển tọa độ thành địa chỉ</string>
    <string name="title_activity_reconize_user_activity">Reconize_user_activity</string>
    <string name="request_activity_updates">Request updates</string>
    <string name="still">Still</string>

    <!-- Activity detection strings -->
    <string name="in_vehicle">In a vehicle</string>
    <string name="on_bicycle">On a bicycle</string>
    <string name="on_foot">On foot</string>
    <string name="running">Running</string>
    <string name="tilting">Tilting</string>
    <string name="unknown">Unknown activity</string>
    <string name="walking">Walking</string>
    <string name="unidentifiable_activity">Unidentifiable activity: %1$d</string>
    <string name="not_connected">Not connected</string>
    <string name="activity_updates_added">Activity updates add</string>
    <string name="activity_updates_removed">Activity update removes</string>
    <string name="basic_reconize_user_demo_label">Reconize activity users</string>
    <string name="basic_reconize_user_demo_description">Nhận biết người dùng đang đi bộ hay chạy</string>
    <string name="title_activity_lite_demo">Lite_demo</string>
    <string name="basic_lite_demo_label">map_11_Litemode</string>
    <string name="basic_lite_demo_description">Vẽ marker, hình đa giác polygons</string>
</resources>
