<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.phong.googlemap_1.Activity_map.Camera">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/stop_animation"
                android:onClick="opStopAnimation"
                android:text="@string/stop_animation"/>

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/animate"
                android:checked="true"
                android:onClick="onToggleAnimate"
                android:textOn="@string/animate"
                android:textOff="@string/animate"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_weight="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/scroll_left"
                android:minWidth="48dp"
                android:onClick="onScrollLeft"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/left_arrow"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/scroll_up"
                android:minWidth="48dp"
                android:onClick="onScrollUp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/scroll_left"
                android:text="@string/up_arrow"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/scroll_down"
                android:minWidth="48dp"
                android:onClick="onScrollDown"
                android:layout_below="@+id/scroll_up"
                android:layout_toRightOf="@+id/scroll_left"
                android:text="@string/down_arrow"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/scroll_right"
                android:minWidth="48dp"
                android:onClick="onScrollRight"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/scroll_down"
                android:text="@string/right_arrow"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/zoom_in"
                android:minWidth="48dp"
                android:onClick="onZoomIn"
                android:text="@string/zoom_in"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/zoom_out"
                android:minWidth="48dp"
                android:onClick="onZoomOut"
                android:text="@string/zoom_out"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="right">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tilt_more"
                android:minWidth="48dp"
                android:text="@string/tilt_more"
                android:onClick="onTiltMore"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="48dp"
                android:id="@+id/tilt_less"
                android:text="@string/tilt_less"
                android:onClick="onTiltLess"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/duration_toggle"
            android:onClick="onToggleCustomDuration"
            android:text="@string/duration"/>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/duration_bar"
            android:layout_weight="1"
            android:max="5000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:id="@+id/sydney"
            android:onClick="onGoToSydney"
            android:text="@string/go_to_sydney"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:id="@+id/bondi"
            android:onClick="onGoToBondi"
            android:text="@string/go_to_bondi"/>
    </LinearLayout>

    <fragment
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map"
        class="com.google.android.gms.maps.SupportMapFragment"/>

</LinearLayout>
